fixed z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   text-align: center;
   background-color: #ef8172;
   color: #fff;
+  position: relative;
 }
 
 #press {
